--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -15,7 +15,7 @@
     <h2>Change your account settings</h2>
     <hr />
     <div class="row">
-        <div class="col-md-3">
+        <div class="user-nav col-md-3">
             <partial name="_ManageNav" />
         </div>
         <div class="col-md-9">
