--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,13 +18,13 @@ a {
 
 .btn-primary {
   color: #fff;
-  background-color: #1b6ec2;
+  background-color: var(--secondary);
   border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #1b6ec2;
+  background-color: var(--secondary);
   border-color: #1861ac;
 }
 
